<?xml version="1.0" encoding="utf-8"?>
<com.kdkj.koudailicai.lib.ui.RelativeLayout.ResizeRelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ParentView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
   <com.kdkj.koudailicai.lib.ui.TitleView
      android:id="@+id/title"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      /> 
     <ScrollView
      android:id="@+id/scrollview"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_below="@id/title"
      android:background="@color/global_back_black_color"
      android:scrollbars="none" >

    <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" >
   
	<TextView
	      android:id="@+id/tv_phone_number"
	      android:layout_height="wrap_content"
	      android:layout_width="wrap_content"
	      android:layout_centerHorizontal="true"
	      android:maxLength="11"
	      android:layout_marginLeft="@dimen/invest_margin_left"
	      android:layout_marginRight="@dimen/invest_margin_left"
	      android:layout_marginTop="10dp"
	      android:gravity="center_vertical|left"
	      android:text="@string/pwd_phone_number"
	      android:textColor="@color/global_black_color"
	      android:textSize="26sp" />
		
	<EditText
	      android:id="@+id/et_old_pwd"
	      android:layout_height="50dp"
	      android:layout_width="fill_parent"
	      android:layout_centerHorizontal="true"
	      android:digits="@string/edittext_box"
	      android:password="true"
	      android:maxLength="16"
	      android:singleLine="true" 
	      android:layout_marginLeft="20dp"
	      android:layout_marginRight="20dp"
	      android:layout_marginTop="10dp" 
	      android:layout_below="@id/tv_phone_number"
	      android:paddingLeft="10dp"
	      android:hint="@string/pwd_old"
	      android:gravity="center_vertical|left"
	      android:background="@drawable/bg_edittext"        
	      android:textColor="@color/global_black_color"
	      android:textSize="@dimen/register_number" />
	
	<EditText
	      android:id="@+id/et_new_pwd"
	      android:layout_height="50dp"
	      android:layout_width="fill_parent"
	      android:layout_centerHorizontal="true"
	      android:digits="@string/edittext_box"
	      android:password="true"
	      android:maxLength="16"
	      android:singleLine="true" 
	      android:layout_marginLeft="20dp"
	      android:layout_marginRight="20dp"
	      android:layout_marginTop="10dp" 
	      android:layout_below="@id/et_old_pwd"
	      android:paddingLeft="10dp"
	      android:hint="@string/pwd_new"
	      android:gravity="center_vertical|left"
	      android:background="@drawable/bg_edittext"        
	      android:textColor="@color/global_black_color"
	      android:textSize="@dimen/register_number" />
		
	<EditText
	      android:id="@+id/et_new_pwd_again"
	      android:layout_height="50dp"
	      android:layout_width="fill_parent"
	      android:layout_centerHorizontal="true"
	      android:digits="@string/edittext_box"
	      android:password="true"
	      android:maxLength="16"
	      android:singleLine="true" 
	      android:layout_marginLeft="20dp"
	      android:layout_marginRight="20dp"
	      android:layout_marginTop="10dp" 
	      android:layout_below="@id/et_new_pwd"
	      android:paddingLeft="10dp"
	      android:hint="@string/pwd_confirm"
	      android:gravity="center_vertical|left"
	      android:background="@drawable/bg_edittext"        
	      android:textColor="@color/global_black_color"
	      android:textSize="@dimen/register_number" />
	<TextView
	      android:id="@+id/tv_password"
	      android:layout_height="wrap_content"
	      android:layout_width="wrap_content"
	      android:layout_marginRight="20dp"
	      android:layout_alignParentRight="true"
	      android:layout_below="@id/et_new_pwd_again"
	      android:layout_marginTop="10dp" 
	      android:text="@string/investcharge_forget_passwd_tip"
	      android:textColor="@color/global_black_color"
	      android:textSize="16sp" />
	  <TextView
          android:id="@+id/tv_complete"
          android:layout_height="50dp"
          android:layout_width="fill_parent"
          android:layout_centerVertical="true"
          android:layout_centerHorizontal="true"
          android:layout_below="@id/tv_password"
    	  android:layout_marginLeft="20dp"
    	  android:layout_marginRight="20dp"
    	  android:layout_marginTop="10dp"
          android:gravity="center"
          android:background="@drawable/btn_grey_background"        
          android:text="@string/complete"
          android:textColor="@color/global_white_color"
          android:textSize="@dimen/global_btn_text_size" />
	</RelativeLayout>
  </ScrollView>
</com.kdkj.koudailicai.lib.ui.RelativeLayout.ResizeRelativeLayout>

