<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    <RelativeLayout 
           android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:gravity="center_horizontal"
	       android:layout_marginTop="8dp"
	       android:layout_marginBottom="8dp"
	       android:orientation="horizontal">
		<LinearLayout 
		    android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:orientation="vertical">
		    <TextView 
		        android:id="@+id/tender_phone" 
		        android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textSize="@dimen/tender_text_mid_size"
	        	android:textColor="@color/tender_text_nomarl_color"
	        	android:text="@string/tender_phone_value"/>
		    <TextView 
		        android:id="@+id/tender_date"  
		        android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_marginTop="@dimen/tender_date_marginTop"
	        	android:textSize="@dimen/tender_text_small_size"
	        	android:textColor="@color/tender_text_color"
	        	android:text="@string/tender_date_value"/>
		</LinearLayout>
		<TextView
		    	android:id="@+id/tender_money"
		    	android:layout_centerInParent="true" 
		    	android:layout_alignParentRight="true"
		    	android:layout_marginRight="@dimen/tender_money_marginRight"
		    	android:textSize="@dimen/tender_text_size"
		      	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/tender_money_value"
		    />
		</RelativeLayout>
		 <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/divide_line_height"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/selfcenter_divide_line_color" />
</LinearLayout>
