<?xml version="1.0" encoding="utf-8"?>
<com.kdkj.koudailicai.lib.ui.RelativeLayout.ResizeRelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ParentView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<com.kdkj.koudailicai.lib.ui.TitleView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
     <ScrollView
      android:id="@+id/scrollview"
      android:layout_below="@id/title"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="@color/global_back_black_color"
      android:scrollbars="none" >

    <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" 

      >
	<EditText
        android:id="@+id/et_back_phone_number"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_centerHorizontal="true"
        android:hint="@string/register_phone"
        android:maxLength="11"
        android:inputType="phone"
        android:singleLine="true" 
        android:padding="10dp"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/phone_x" 
        android:layout_marginLeft="20dp"
      	android:layout_marginRight="20dp"
      	android:layout_marginTop="10dp"
       	android:background="@drawable/bg_edittext"        
        android:textColor="@color/global_black_color"
        android:textSize="@dimen/register_number" />
    
		
	<EditText
        android:id="@+id/et_back_realname"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@id/et_back_phone_number"
        android:layout_centerHorizontal="true"
        android:singleLine="true" 
        android:padding="10dp"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/name_2x" 
        android:layout_marginLeft="20dp"
      	android:layout_marginRight="20dp"
      	android:layout_marginTop="10dp"
        android:hint="@string/pwd_real_name"
        android:gravity="center_vertical|left"
       	android:background="@drawable/bg_edittext"        
        android:textColor="@color/global_black_color"
        android:textSize="@dimen/register_number" />
	
	<EditText
        android:id="@+id/et_back_idcard"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:layout_below="@id/et_back_realname"
        android:layout_centerHorizontal="true"
        android:digits="0123456789xX"
        android:singleLine="true" 
        android:padding="10dp"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/id_card_x" 
        android:layout_marginLeft="20dp"
      	android:layout_marginRight="20dp"
      	android:layout_marginTop="10dp"
        android:maxLength="18"
        android:hint="@string/pwd_id_card"
        android:gravity="center_vertical|left"
       	android:background="@drawable/bg_edittext"        
        android:textColor="@color/global_black_color"
        android:textSize="@dimen/register_number" />
	
   <RelativeLayout
     android:id="@+id/rl_back_verification"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:layout_below="@id/et_back_idcard"
     android:layout_marginLeft="20dp"
  	 android:layout_marginRight="20dp"
     android:layout_marginTop="10dp" >

     <EditText
         android:id="@+id/et_back_verification"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:drawableLeft="@drawable/messagex"
         android:singleLine="true" 
         android:padding="10dp"
         android:inputType="number"
         android:drawablePadding="8dp"
         android:background="@drawable/bg_edittext"
         android:hint="@string/register_verification"
         android:textColor="@color/global_black_color"
   	     android:textSize="@dimen/register_number"
         android:maxLength="6" 
         android:paddingLeft="40dp"/>
    

     <TextView
         android:id="@+id/tv_back_verification"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:hint="@string/register_obtain_verification"
         android:layout_alignRight="@id/et_back_verification"
         android:gravity="center"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:textColor="@color/global_black_color"
         android:layout_centerVertical="true"/>

     <View
         android:layout_width="0.5dp"
         android:layout_height="fill_parent"
         android:layout_alignLeft="@+id/tv_back_verification"
         android:background="@color/global_label_color" />

    </RelativeLayout>
   
	<TextView
        android:id="@+id/tv_next"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/rl_back_verification"
	   android:layout_marginLeft="20dp"
	   android:layout_marginRight="20dp"
	   android:layout_marginTop="10dp"
        android:background="@drawable/btn_grey_background"        
        android:text="@string/invest_next_label"
        android:textColor="@color/global_white_color"
        
        android:textSize="@dimen/global_btn_text_size" />
   </RelativeLayout>
  </ScrollView>
</com.kdkj.koudailicai.lib.ui.RelativeLayout.ResizeRelativeLayout>
